styles.css
[data-numbered-container] {
  height: 5.5ch;
  color: #000000;
  font-family: monospace;
  font-size: 13px;
  line-height: 1.2;
  background: #ffffff;
  border: 1px solid #767676;
  overflow: hidden;
  resize: both;
}
div[data-numbered-container] {
  display: flex;
}
span[data-numbered-container] {
  display: inline-flex;
  vertical-align: top;
}
[data-numbered-container]:hover, [data-numbered-container]:focus-within {
  border-color: #3b3b3b;
}
[data-numbered-container]:focus-within {
  outline: 2px solid #000000;
  outline-offset: -1px;
}
[data-numbered-container] * {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
[data-numbered-container] ol {
  counter-reset: item;
  margin: 0;
  padding: 0.5ch;
  flex-shrink: 0;
  color: #ffffff;
  text-align: right;
  background: #0000005e;
  border-right: inherit;
  cursor: text;
  list-style: inside none;
  overflow: hidden;
}
[data-numbered-container][data-numbered-hidden] ol {
  display: none;
}
[data-numbered-container] li::before {
  content: counter(item);
  counter-increment: item;
}
[data-numbered-container] textarea {
  padding: 0.5ch;
  flex-grow: 1;
  color: inherit;
  background: transparent;
  border: none;
  border-radius: 0;
  white-space: pre;
  outline: none;
  resize: none;
}

